-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.4.1, Lustre 2.5.1
-
Lustre client: http://build.whamcloud.com/job/lustre-b2_4/67/
Lustre server: http://build.whamcloud.com/job/lustre-b2_3/41/ (2.3.0)
-
3
-
12021
While running conf-sanity test 50h, the following LBUG failure occurred on MDS node:
09:07:20:Lustre: Permanently deactivating lustre-OST0000 09:07:20:Lustre: setting import lustre-OST0000_UUID INACTIVE by administrator request 09:07:20:LustreError: 8773:0:(import.c:285:ptlrpc_invalidate_import()) ASSERTION( imp->imp_invalid ) failed: 09:07:20:LustreError: 8773:0:(import.c:285:ptlrpc_invalidate_import()) LBUG 09:07:20:Pid: 8773, comm: llog_process_th 09:07:20: 09:07:20:Call Trace: 09:07:20: [<ffffffffa04ea905>] libcfs_debug_dumpstack+0x55/0x80 [libcfs] 09:07:20: [<ffffffffa04eaf17>] lbug_with_loc+0x47/0xb0 [libcfs] 09:07:21: [<ffffffffa0808421>] ptlrpc_invalidate_import+0x391/0x8d0 [ptlrpc] 09:07:21: [<ffffffffa04fb5f1>] ? libcfs_debug_msg+0x41/0x50 [libcfs] 09:07:21: [<ffffffffa0647f59>] ? lprocfs_write_frac_helper+0xa9/0x150 [obdclass] 09:07:21: [<ffffffffa07ddca5>] ptlrpc_set_import_active+0x405/0x6e0 [ptlrpc] 09:07:21: [<ffffffffa09992ae>] osc_wr_active+0xfe/0x120 [osc] 09:07:21: [<ffffffffa065e05e>] class_process_proc_param+0x35e/0x780 [obdclass] 09:07:21: [<ffffffffa098688a>] osc_process_config_base+0x4a/0x60 [osc] 09:07:21: [<ffffffffa099df1f>] osc_cl_process_config+0xaf/0xe0 [osc] 09:07:21: [<ffffffffa065fb53>] class_process_config+0x16d3/0x1c30 [obdclass] 09:07:21: [<ffffffffa0658ef1>] ? lustre_cfg_new+0x391/0x7e0 [obdclass] 09:07:21: [<ffffffffa066115b>] class_config_llog_handler+0x9bb/0x1610 [obdclass] 09:07:22: [<ffffffffa04fb5f1>] ? libcfs_debug_msg+0x41/0x50 [libcfs] 09:07:22: [<ffffffffa062a1f8>] llog_process_thread+0x888/0xd00 [obdclass] 09:07:22: [<ffffffffa0629970>] ? llog_process_thread+0x0/0xd00 [obdclass] 09:07:22: [<ffffffff8100c14a>] child_rip+0xa/0x20 09:07:22: [<ffffffffa0629970>] ? llog_process_thread+0x0/0xd00 [obdclass] 09:07:22: [<ffffffffa0629970>] ? llog_process_thread+0x0/0xd00 [obdclass] 09:07:22: [<ffffffff8100c140>] ? child_rip+0x0/0x20 09:07:23: 09:07:23:Kernel panic - not syncing: LBUG
Maloo report: https://maloo.whamcloud.com/test_sets/838153a6-628c-11e3-bf4a-52540035b04c
- duplicates
-
LU-4636 Test failure on test suite conf-sanity, subtest test_50h client start failed
-
- Closed
-